[package]
name = "cellwall"
version = "0.1.0"
authors = ["Matteo Bigoi <bigo@crisidev.org>"]
edition = "2024"
description = "A setuid implementation of a subset of user namespaces - Rust port of bubblewrap"
license-file = "LICENSE"
repository = "https://github.com/crisidev/cellwall"
readme = "README.md"
keywords = ["container", "sandbox", "namespace", "security"]
categories = ["os::linux-apis", "command-line-utilities"]

[[bin]]
name = "cw"
path = "src/main.rs"

[dependencies]
bitflags = "2.9"
caps = "0.5"
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
env_logger = "0.11"
eyre = "0.6"
libc = "0.2"
log = "0.4"
nix = { version = "0.30", features = [
    "feature",
    "fs",
    "hostname",
    "ioctl",
    "mount",
    "net",
    "process",
    "resource",
    "sched",
    "signal",
    "socket",
    "user",
] }

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"

[profile.dev]
opt-level = 0

[dev-dependencies]
tempfile = "3.14"
